# vidsniff

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh  vidsniff.py
extension/: background.js  manifest.json  popup.html  popup.js
vidsniff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
